Update folder structure for Ultimate Magic Playtest Round 1.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13084 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/5163_nitehawkinteractivegames_shadmar/build.xml
+++ b/content/outofcycledatasets/5163_nitehawkinteractivegames_shadmar/build.xml
@@ -7,7 +7,7 @@ build.xml - an Ant build file for assembling data sets
 $Id: build.xml 192 2008-04-30 12:19:47Z James $
 -->
 <project name="pcgen" default="packageall" basedir=".">
-	<basename property="datasetname" file="Shadmar_Dataset"/>
+	<basename property="datasetname" file="5163_nig_ladoratory_mad_wizard_shadmar"/>
 	<property name="zipfile" value="../${datasetname}.pcz" />
 
 	<target name="init">
