--- a/pcgen/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/pcgen/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2954,6 +2954,8 @@ in_Prefs_colorStatusAlpha=Alpha Status
 
 in_Prefs_colorStatusBeta=Beta Status
 
+in_Prefs_colorStatusTest=Test Status
+
 in_Prefs_colorSelect=Select color for
 
 in_Prefs_tabs=Tabs
